Make sure Pkg.clone stays on one line with nowrap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -634,6 +634,7 @@ a.panel-heading:focus {
   margin-left: 19% !important;
   overflow-x: scroll;
   line-height: 1.2;
+  white-space: nowrap;
 }
 
 #js-copy-text::selection { background: transparent; }
